add indian currency

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ CHAT_ID=5069865578
 # Server Configuration
 PORT=3000
 
-# CoinGecko API (optional settings)
-COINGECKO_API_KEY=your_api_key_here_if_you_have_one
-CHECK_INTERVAL=60  # Seconds between checks (60 = 1 minute)
+# Server Configuration
+PORT=3000
+
+# DexScreener Configuration (No API key needed!)
+# Free, no rate limits, perfect for your use case # Seconds between checks (60 = 1 minute)
