--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
-  "name": "deep-node-telegram-alert",
-  "version": "1.0.0",
-  "description": "Telegram bot for Deep Node price alerts",
+  "name": "deep-node-group-alert",
+  "version": "3.0.0",
+  "description": "Group-friendly Telegram bot for Deep Node price alerts",
   "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "node --watch index.js",
-    "test": "echo \"No tests specified\" && exit 0"
+    "dev": "node --watch index.js"
   },
-  "keywords": ["telegram", "bot", "crypto", "price-alert", "deep-node"],
-  "author": "Your Name",
-  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "node-fetch": "^3.3.2",
